--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>parse</artifactId>
-        <version>0.0.5-SNAPSHOT</version>
-        <groupId>edu.kit.ipd.parse</groupId>
+        <groupId>edu.kit.ipd.pronat</groupId>
+        <artifactId>pronat</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <artifactId>wikiWSD</artifactId>
+    <artifactId>wiki_wsd</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-
+    <name>Wiki WSD Agent</name>
     <repositories>
         <repository>
             <id>ipdNexus-public-releases</id>
@@ -31,7 +31,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <configuration>
-                    <outputDirectory>${parse_bundle.directory}/plugins</outputDirectory>
+                    <outputDirectory>${pronat_bundle.directory}/plugins</outputDirectory>
                 </configuration>
             </plugin>
             <plugin>
@@ -45,7 +45,7 @@
                             <goal>copy-dependencies</goal>
                         </goals>
                         <configuration>
-                            <outputDirectory>${parse_bundle.directory}/plugins/libs
+                            <outputDirectory>${pronat_bundle.directory}/plugins/libs
                             </outputDirectory>
                             <overWriteReleases>false</overWriteReleases>
                             <overWriteSnapshots>false</overWriteSnapshots>
@@ -60,7 +60,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>edu.kit.ipd.parse</groupId>
+            <groupId>edu.kit.ipd.pronat</groupId>
             <artifactId>wiki_wsd_models</artifactId>
             <scope>test</scope>
         </dependency>
@@ -84,10 +84,12 @@
             <groupId>edu.kit.ipd.parse</groupId>
             <artifactId>luna</artifactId>
             <classifier>javadoc</classifier>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>edu.kit.ipd.parse</groupId>
             <artifactId>luna</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -103,21 +105,21 @@
             <artifactId>metainf-services</artifactId>
         </dependency>
         <dependency>
-            <groupId>edu.kit.ipd.parse</groupId>
-            <artifactId>wikiWSDClassifier</artifactId>
+            <groupId>edu.kit.ipd.pronat</groupId>
+            <artifactId>wiki_wsd_classifier</artifactId>
         </dependency>
         <dependency>
-            <groupId>edu.kit.ipd.parse</groupId>
-            <artifactId>ShallowNLP</artifactId>
+            <groupId>edu.kit.ipd.pronat</groupId>
+            <artifactId>shallow_nlp</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>edu.kit.ipd.parse</groupId>
-            <artifactId>graphBuilder</artifactId>
+            <groupId>edu.kit.ipd.pronat</groupId>
+            <artifactId>graph_builder</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>edu.kit.ipd.parse</groupId>
+            <groupId>edu.kit.ipd.pronat</groupId>
             <artifactId>ner</artifactId>
             <scope>test</scope>
         </dependency>
@@ -128,6 +130,6 @@
         </dependency>
     </dependencies>
     <properties>
-        <parse_bundle.directory>../parse_bundle</parse_bundle.directory>
+        <pronat_bundle.directory>../pronat_bundle</pronat_bundle.directory>
     </properties>
 </project>
