--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,9 @@
     <name>Wiki WSD Agent</name>
     <repositories>
         <repository>
-            <id>ipdNexus-public-releases</id>
+            <id>ipdNexus-public-all</id>
             <name>IPD-Repository</name>
-            <url>http://bob.ipd.kit.edu/nexus/repository/maven-public-releases</url>
+            <url>https://bob.ipd.kit.edu/nexus/repository/maven-public-all</url>
         </repository>
     </repositories>
 
